@@ -1,3 +1,7 @@
+2008-11-06	Brian Tarricone <bjt23@cornell.edu>
+
+	* exo-helper/main.c: Fix compile against glib < 2.14.
+
 2008-11-03	Jannis Pohlmann <jannis@xfce.org>
 
 	* exo/exo-url.c: Split up assignment and conditional into separate 
